  waarschuwing en dus een concept-factuur. Deze situatie wordt nu beter
  aangepakt waardoor de waarschuwing niet meer gegeven zal worden.
- ALL: Als je vanaf nu een factuur opnieuw en geforceerd verstuurd, zal de oude
  boeking de "verwijderd" status krijgen. Je ontvangt hierover een mail. Ook de
  waarschuwing bij geforceerd verzenden is aangepast.
- ALL: meerdere spelfouten uit de NL en EN vertalingen gehaald.
- ALL: fouten en waarschuwingen van een ander API request (vooralsnog opvragen
  btw tarieven en verwijderen oude entry) worden toegvoegd aan het
  overall resultaat van de hoofdbewerking (add invoice).
- ALL: toegang op veldniveau tot acumulus entry records is nu beter geregeld.
- ALL: A number of API calls have been added:
  * Set Delete Status: https://siel.nl/acumulus/API/Entry/Set_Delete_Status/
  * Get Entry (Boeking) Details: https://siel.nl/acumulus/API/Entry/Get_Entry_Details/
  * Payment - Get status: https://siel.nl/acumulus/API/Invoicing/Payment_Get_Status/
  * Payment - Set status: https://siel.nl/acumulus/API/Invoicing/Payment_Set_Status/
  * Email invoice or reminder: https://siel.nl/acumulus/API/Invoicing/Email/
  * Get PDF Invoice: https://siel.nl/acumulus/API/Invoicing/Get_PDF_Invoice/
  * Get PDF Packing Slip: https://siel.nl/acumulus/API/Delivery/Get_PDF_Packing_Slip/
  This allows us to add numerous features in upcoming releases.

5.1.2 (2018-02-14)
------------------
- ALL: currency meta informatie wordt nu gebruikt om bestellingen in andere
  currencies te converteren naar euro's. Dit werkt voor zover de shop de meta
  info correct weet aan te leveren.
- ALL: Als de standaard currency v/d shop geen euro is, maar de order wel, maar
  bedragen worden opgeslagen in de standaard valuta wordt de factuur ook
  geconverteerd naar euros.
- VM: Ondersteuning voor andere currencies. Alleen meta-info, opslag is altijd
  in base currency.
- HS: Ondersteuning voor andere currencies. Er zit een fout in HS zelf als je